--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1",
     "yup": "^1.4.0"
